@@ -9,7 +9,8 @@ echo "---------------------------------------------------------------------"
 java -version
 echo "---------------------------------------------------------------------"
 
-java -jar promptfx-@version@.jar
+set JVM_OPTS=--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED --add-opens javafx.graphics/javafx.scene=ALL-UNNAMED
+java %JVM_OPTS% -jar promptfx-@version@.jar
 
 echo "---------------------------------------------------------------------"
 echo "PromptFx UI has exited."
